--- a/r/ru/rus/russian-women.net.html
+++ b/r/ru/rus/russian-women.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the russian-women.net privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603141827id_/http%3A//www.russian-women.net/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the russian-women.net privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204164312id_/http%3A//www.russian-women.net/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
@@ -71,106 +71,106 @@ var latest = 0;
 var ama = 7;
 
 girls = new Array(
-"ri9753",
-"dy3642",
-"mq2631",
-"oj6171",
-"br7561",
-"cm8593",
-"ms9703",
-"kb2452",
-"ui2694",
-"or9273",
-"oe6620",
-"qd8263",
-"bu3584",
-"gk5173",
-"sh2544",
-"mt2441",
-"uq9032",
-"dl3280",
-"md0363",
-"by8832",
-"ys7571",
-"em5721",
-"wk2691",
-"am9582",
-"qd7371",
-"ym3954",
-"jc0743",
-"rv1110",
-"pa0743",
-"cc6120",
-"qf3882",
-"ke4204",
-"qh6200",
-"xf7003",
-"oh9740",
-"si1281",
-"ux7642",
-"nv6852",
-"pa7673",
-"ak6823",
-"uj0401",
-"bc4813",
-"py3441",
-"co5782",
-"kh1900",
-"yr7062",
-"km5254",
-"ua5444",
-"ce7593",
-"gq3330",
-"bf4832",
-"wl1122",
-"rk3463",
-"mb3134",
-"tt0564",
-"vf1923",
-"cf8543",
-"os5380",
-"ww8994",
-"cd2884",
-"tp0301",
-"ju7210",
-"sd9392",
-"xe0711",
-"hg7372",
-"xs8064",
-"sl0754",
-"dx0504",
-"uh9904",
-"oc5263",
-"hd4363",
-"em8823",
-"ca5144",
-"dx0822",
-"qk2904",
-"jx4591",
-"ef3190",
-"xh5520",
-"ph3011",
-"uz4413",
-"ko5344",
-"tu5264",
-"ij5534",
-"pm1892",
-"rp6703",
-"ku6210",
-"bp8994",
-"to6901",
-"bb1154",
-"wm0873",
-"iz5864",
-"hg2221",
-"gy5600",
-"sx9653",
-"cv9782",
-"iw2474",
-"bm0912",
-"qx4334",
-"jj5814",
-"mf0474"
+"nq1583",
+"qx4443",
+"qx4064",
+"aj6191",
+"pz9782",
+"jy6462",
+"qr4910",
+"ry5994",
+"ct1232",
+"xe8534",
+"mu7591",
+"uy3661",
+"bf0013",
+"qn0642",
+"vl3571",
+"ih2650",
+"pr0613",
+"ex8424",
+"sj1174",
+"it3144",
+"va5991",
+"ag9401",
+"he8884",
+"gf0644",
+"om1503",
+"qt6114",
+"ap9231",
+"kc5771",
+"ci1542",
+"ec4562",
+"pa1344",
+"jc8130",
+"od1303",
+"ic0653",
+"rc0762",
+"ry3571",
+"vs4580",
+"wh1460",
+"ru2683",
+"ph0840",
+"tm3660",
+"sl7870",
+"fc2853",
+"tv9641",
+"gk0893",
+"wn1512",
+"os1921",
+"eq3984",
+"rv5941",
+"qv6654",
+"pq2100",
+"wt9363",
+"ba4464",
+"vo8052",
+"uz3200",
+"uo4753",
+"bb1771",
+"ah8731",
+"hx8532",
+"nh2844",
+"kn7694",
+"wi3322",
+"qm7651",
+"en7003",
+"er9170",
+"te5040",
+"ss4971",
+"it6574",
+"ce0802",
+"ki7422",
+"fg2350",
+"cr9293",
+"fp5604",
+"aw9303",
+"cl9303",
+"gl3782",
+"bs0742",
+"bj5452",
+"fy4174",
+"np9920",
+"tc2972",
+"uu1324",
+"kw0933",
+"es7274",
+"cw6642",
+"az4664",
+"ls5470",
+"kq6694",
+"mz1101",
+"lv1072",
+"vo1241",
+"oq1830",
+"rr2614",
+"ud1794",
+"qo8533",
+"ap2231",
+"po5254",
+"ty6713",
+"cl8060",
+"qg1921"
 )
 
 current[0]=0
@@ -274,13 +274,13 @@ current[97]=97
 current[98]=98
 current[99]=99
 </script>
-<a href="http://www.russian-women.net/ladies/ri9753.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_ri9753.jpg" alt="Russian women network,the:Single Russian women mariage" hspace="0" vspace="0" border="0" width="75" height="100"></a>
-<a href="http://www.russian-women.net/ladies/dy3642.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_dy3642.jpg" alt="Russian women network,the:marry Russian woman" hspace="0" vspace="0" border="0" width="75" height="100"></a>
-<a href="http://www.russian-women.net/ladies/mq2631.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_mq2631.jpg" alt="Russian women network,the:Marrying Russian brides" hspace="0" vspace="0" border="0" width="75" height="100"></a>
-<a href="http://www.russian-women.net/ladies/oj6171.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_oj6171.jpg" alt="Russian women network,the:Russian love matchmaker" hspace="0" vspace="0" border="0" width="75" height="100"></a>
-<a href="http://www.russian-women.net/ladies/br7561.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_br7561.jpg" alt="Russian women network,the:Russian personals" hspace="0" vspace="0" border="0" width="75" height="100"></a>
-<a href="http://www.russian-women.net/ladies/cm8593.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_cm8593.jpg" alt="Russian women network,the:Russian wife" hspace="0" vspace="0" border="0" width="75" height="100"></a>
-<a href="http://www.russian-women.net/ladies/ms9703.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_ms9703.jpg" alt="Russian women network,the:Russian mail order brides" hspace="0" vspace="0" border="0" width="75" height="100"></a>
+<a href="http://www.russian-women.net/ladies/nq1583.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_nq1583.jpg" alt="Russian women network,the:Single Russian women mariage" hspace="0" vspace="0" border="0" width="75" height="100"></a>
+<a href="http://www.russian-women.net/ladies/qx4443.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_qx4443.jpg" alt="Russian women network,the:marry Russian woman" hspace="0" vspace="0" border="0" width="75" height="100"></a>
+<a href="http://www.russian-women.net/ladies/qx4064.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_qx4064.jpg" alt="Russian women network,the:Marrying Russian brides" hspace="0" vspace="0" border="0" width="75" height="100"></a>
+<a href="http://www.russian-women.net/ladies/aj6191.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_aj6191.jpg" alt="Russian women network,the:Russian love matchmaker" hspace="0" vspace="0" border="0" width="75" height="100"></a>
+<a href="http://www.russian-women.net/ladies/pz9782.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_pz9782.jpg" alt="Russian women network,the:Russian personals" hspace="0" vspace="0" border="0" width="75" height="100"></a>
+<a href="http://www.russian-women.net/ladies/jy6462.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_jy6462.jpg" alt="Russian women network,the:Russian wife" hspace="0" vspace="0" border="0" width="75" height="100"></a>
+<a href="http://www.russian-women.net/ladies/qr4910.shtml" target="_blank"><img src="http://ircha.net/thumbs/latest/s_qr4910.jpg" alt="Russian women network,the:Russian mail order brides" hspace="0" vspace="0" border="0" width="75" height="100"></a>
 
 <br>
 <a class="menu" target="_blank" href="/russian-women-seeking-men.shtml"><b>More Russian women seeking men-&gt;</b></a>
@@ -305,7 +305,7 @@ by all <b>Russian brides personals</b> listed.
 
 <div class="menu" align="center">
 <!--Begin The Russian Women Network Links-->
-<a class="menu" href="/album/">27170 Russian Women Photo Profiles</a>
+<a class="menu" href="/album/">28230 Russian Women Photo Profiles</a>
 <a class="menu" href="/latest/"><font color="#FF0000">Latest Additions</font></a>
 <a class="menu" href="/engine.shtml">SEARCH ENGINE</a>
 <a class="menu" href="/service.shtml">Services</a>
@@ -315,7 +315,6 @@ by all <b>Russian brides personals</b> listed.
 <a target="_blank" class="menu" href="/smart-match/"><b>SmartMatch Dating directory</b>:</a> <a target="_blank" class="menu" href="http://russian-match.russian-women.net/">find</a> <b>Beautiful Russian Women, Ukrainian Women with photo</b>
 <a class="menu" href="/letters.shtml"><font color="#FF0000">EMail Forwarding with pictures</font></a>
 <a class="menu" href="/travel">Personal tours</a>
-<a class="menu" href="/admen.shtml">Men's advertising</a>
 <a class="menu" href="/csedit.shtml"><font color="#FF0000">Account Information</font></a>
 <a class="menu" href="/gifts.shtml">Flowers &amp; Gifts Delivery</a>
 <b>FREE</b> <a class="menu" href="http://free.russian-women.net/"> profiles</a>
@@ -327,7 +326,7 @@ by all <b>Russian brides personals</b> listed.
 <a class="menu" href="/links.shtml"><font color="#FF0000">Dating Links</font></a>&amp;<a class="menu" href="/useful_sites.shtml"><font color="#FF0000">Useful Resourses</font></a>
 <a class="menu" href="mailto:EnterYourFriend@EmailHere?subject=Visit Russian-Women.Net&amp;body=%0D%0Ahttp://russian-women.net - there are so many gorgeous women on this site who seem to be interested in meeting a nice man :-).">Tell a friend</a>
 <a class="menu" href="/answers.shtml">Real Questions - Real Answers</a>
-<a class="menu" href="/search.shtml">Power Search: find what you want!</a>
+<a class="menu" href="/search.shtml">Powerful Search: find what you want!</a>
 <a class="menu" href="http://www.russian-women.net/top/"><font color="#FF0000">English Speaking Russian Women</font></a>
 <a class="menu" href="/road_map.shtml" target="_blank">Road Map - our brides destinations</a>
 <a class="menu" target="_blank" href="/why/"><b>Why Russian women?</b></a>
@@ -337,19 +336,20 @@ by all <b>Russian brides personals</b> listed.
 <a class="menu" target="_blank" href="http://minsk.russian-women.net">Minsk</a>
 <a class="menu" target="_blank" href="http://kiev.russian-women.net">Kiev</a>
 <a class="menu" target="_blank" href="http://sevastopol.russian-women.net">Sevastopol</a>
+<a class="menu" target="_blank" href="http://simferopol.russian-women.net">Simferopol</a>
 <a class="menu" target="_blank" href="http://poltava.russian-women.net">Poltava</a>
-<a class="menu" target="_blank" href="http://angelika-network.com "><b><big>вход для девушек</big><b></b></b></a><b><b>
+<a class="menu" target="_blank" href="http://angelika-network.com "><b><big>вход для девушек</big></b></a>
 
 <!--End The Russian Women Network Links-->
-</b></b></div><b><b>
+</div>
 <div class="main">
 <br>
 <center>
-<a class="menu" target="_blank" href="/new_profiles_today.shtml"><big>36
-new brides</big></a> added Wednesday June 2 2004 at 23:44 GMT:
+<a class="menu" target="_blank" href="/new_profiles_today.shtml"><big>30
+new brides</big></a> added Saturday December 4 2004 at 00:40 GMT:
 <a class="menu" target="_blank" href="/new_profiles_today_thumbnailed.shtml">Click here!</a>
  <br>
-<a class="menu" target="_blank" href="/updated_photos_today.shtml">16
+<a class="menu" target="_blank" href="/updated_photos_today.shtml">14
 previous personals profiles photos</a> updated today. <a class="menu" target="_blank" href="/updated_photos_today_thumbnailed.shtml">Click here for thumbs!</a>
  <br>
 <a class="menu" target="_blank" href="/updated_photos_weekly.shtml">Photos updated last week - list of profiles</a>
@@ -357,9 +357,9 @@ previous personals profiles photos</a> updated today. <a class="menu" target="_b
 <a class="menu" target="_blank" href="/updated_photos_thumbnailed_weekly.shtml">Photos updated last week - links with thumbs (may be huge page to load!)</a>
 
  <br>
- Currently there are <big><b>27170</b></big> Russian personals in 
+ Currently there are <big><b>28230</b></big> Russian personals in 
  <a class="menu" target="_blank" href="/album"><b>OUR Dating Album</b></a>. &nbsp;
- And <big><b>18072</b></big> previously listed women are no longer available.
+ And <big><b>22972</b></big> previously listed women are no longer available.
  </center>
 <center>
 <br>
@@ -618,7 +618,7 @@ Document.Write Now()
 </script>
 copyright © WDN 1997-<script type="text/vbscript" language="vbscript">Document.Write Year(Now())</script>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </div>
-</b></b></blockquote><b><b>
+</blockquote>
 
 
-</b></b></body></html>
+</body></html>
