--- a/d/de/den/denverbroncos.com.html
+++ b/d/de/den/denverbroncos.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the denverbroncos.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607022316id_/http%3A//www.denverbroncos.com/page.php%3Fid%3D101) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the denverbroncos.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204164427id_/http%3A//www.denverbroncos.com/page.php%3Fid%3D101) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>DenverBroncos.com -- Official Web Site of the Denver Broncos</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <base href="http://www.denverbroncos.com/">
-<!-- Last Updated:  06/06/04 20:26:46 -->
+<!-- Last Updated:  12/04/04 09:44:22 -->
 <script src="/__utm.js" type="text/javascript"></script>
 <script language="JavaScript" src="resources/js/client.js"></script>
 <script language="JavaScript" src="resources/js/front_end.js"></script>
@@ -37,6 +37,8 @@ writeStyles("resources/css/");
 <table border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td>
+
+
 <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" width="360" height="81" align="right">
 <param name="movie" value="http://www.denverbroncos.com/resources/swf/banner_003.swf?totalProducts=100&amp;delaySeconds=6">
 <param name="quality" value="high">
@@ -93,21 +95,7 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		</tbody></table>
 	</td>
 </tr>
-<tr>
-	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
-</tr>
-<tr>
-	<td>
-		<table cellpadding="0" cellspacing="0" border="0">
-		<tbody><tr>
-		<td><img src="resources/img/uni/clear.gif" width="1" height="18" align="absmiddle"></td>
-		<td><a href="page.php?id=1220" class="nav0">Sharpe Tribute</a></td>
-		<td><img src="resources/img/uni/clear.gif" width="3" height="18"></td>
-		</tr>
-		</tbody></table>
-	</td>
-</tr>
-<tr>
+ <tr>
 	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -121,7 +109,8 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		</tbody></table>
 	</td>
 </tr>
-<tr>
+
+ <tr>
 	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -135,7 +124,8 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		</tbody></table>
 	</td>
 </tr>
-<tr>
+
+ <tr>
 	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -149,7 +139,8 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		</tbody></table>
 	</td>
 </tr>
-<tr>
+
+ <tr>
 	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -163,7 +154,8 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		</tbody></table>
 	</td>
 </tr>
-<tr>
+
+ <tr>
 	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -177,7 +169,8 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		</tbody></table>
 	</td>
 </tr>
-<tr>
+
+ <tr>
 	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -191,7 +184,8 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		</tbody></table>
 	</td>
 </tr>
-<tr>
+
+ <tr>
 	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -205,7 +199,8 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		</tbody></table>
 	</td>
 </tr>
-<tr>
+
+ <tr>
 	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -219,7 +214,8 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		</tbody></table>
 	</td>
 </tr>
-<tr>
+
+ <tr>
 	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -233,7 +229,8 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		</tbody></table>
 	</td>
 </tr>
-<tr>
+
+ <tr>
 	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -247,7 +244,8 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		</tbody></table>
 	</td>
 </tr>
-<tr>
+
+ <tr>
 	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -255,13 +253,14 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		<table cellpadding="0" cellspacing="0" border="0">
 		<tbody><tr>
 		<td><img src="resources/img/uni/clear.gif" width="1" height="18" align="absmiddle"></td>
-		<td><a href="page.php?id=94" class="nav0">Tickets</a></td>
+		<td><a href="javascript:popupLink('/ticketOffice/','left=50,screenX=50,top=50,screenY=50,channelmode=0,directories=0,height=600,innerHeight=600,width=800,innerWidth=800,hotkeys=0,location=0,menubar=0,titlebar=0,toolbar=0,resizable=1,status=0,scrollbars=0');" class="nav0">Tickets</a></td>
 		<td><img src="resources/img/uni/clear.gif" width="3" height="18"></td>
 		</tr>
 		</tbody></table>
 	</td>
 </tr>
-<tr>
+
+ <tr>
 	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -275,7 +274,8 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		</tbody></table>
 	</td>
 </tr>
-<tr>
+
+ <tr>
 	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -283,12 +283,28 @@ document.write("<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding
 		<table cellpadding="0" cellspacing="0" border="0">
 		<tbody><tr>
 		<td><img src="resources/img/uni/clear.gif" width="1" height="18" align="absmiddle"></td>
-		<td><a href="page.php?id=1055" class="nav0">Elway Tribute</a></td>
+		<td><a href="page.php?id=830" class="nav0">Fantasy Football</a></td>
 		<td><img src="resources/img/uni/clear.gif" width="3" height="18"></td>
 		</tr>
 		</tbody></table>
 	</td>
 </tr>
+
+ <tr>
+	<td bgcolor="#D9E3EE"><img src="resources/img/uni/clear.gif" width="1" height="1"></td>
+</tr>
+<tr>
+	<td>
+		<table cellpadding="0" cellspacing="0" border="0">
+		<tbody><tr>
+		<td><img src="resources/img/uni/clear.gif" width="1" height="18" align="absmiddle"></td>
+		<td><a href="page.php?id=1364" class="nav0">Online Store</a></td>
+		<td><img src="resources/img/uni/clear.gif" width="3" height="18"></td>
+		</tr>
+		</tbody></table>
+	</td>
+</tr>
+
 </tbody></table>
 </td>
 <td rowspan="3" bgcolor="#4D4D4D"><img src="resources/uni/clear.gif" width="1" height="1"></td>
@@ -501,7 +517,11 @@ Denver, CO 80204</p>
 Copyright © 2004, Denver Broncos  | 
 <span class="sitelink"><a class="tinyLink" href="http://www.denverbroncos.com/page.php?id=101">Privacy Policy</a></span> |
 <span class="sitelink"><a class="tinyLink" href="http://www.denverbroncos.com/page.php?id=282">FAQ</a></span> |
-<a href="http://www.icra.org/labelv02.html" target="_blank" class="tinyLink">Labelled with ICRA</a> | 
+<a href="http://www.icra.org/labelv02.html" target="_blank" class="tinyLink">Labelled with ICRA</a> | <a href="/page.php?id=1219" class="tinyLink">Contact Us</a>
+<br>
+<br>
+Built by  <a href="http://www.creationchamber.com/" target="_blank"><img src="resources/img/logo/creationchamber.gif" width="196" height="30" align="absmiddle" border="0" alt="Developed by Creation Chamber, Inc."></a>
+&nbsp;&nbsp;&nbsp;
 Site Powered by <a href="http://www.viawest.net/" target="_blank"><img src="resources/img/logo/viawest.gif" width="100" height="30" align="absmiddle" border="0"></a>
 <br>
 <br>
