--- a/i/ii/iii/iii.com.html
+++ b/i/ii/iii/iii.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the iii.com privacy policy that was archived on 2004-04-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040401232246id_/http%3A//www.iii.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iii.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204165423id_/http%3A//www.iii.com/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Innovative Interfaces: Privacy Statement</title>
@@ -134,27 +134,26 @@ function MM_swapImage() { //v3.0
     <td width="167" valign="top"><img src="/images/quote_home.gif" alt="Innovative Interfaces is the leading provider of Web-based solutions to thousands of academic, public, special, medical, law, and school district libraries worldwide." name="quote" width="168" height="360" id="quote"></td>
     <td valign="top"> <p><a href="#"></a><img src="/images/title_privacy.gif" alt="Privacy Statement" width="355" height="22"></p>
       
-<p class="newsdate">Updated March 20, 2001</p>
+<p class="newsdate">Updated June 24, 2004</p>
 <h1>
 PLEASE READ THESE "STATEMENTS OF PRIVACY" CAREFULLY </h1>
 <h1>BEFORE USING THIS WEB SITE.</h1>
 <p>&nbsp;</p>
+
 <p>At Innovative Interfaces Inc., we are committed to protecting your privacy and to developing technology that gives you the most powerful and secure online experience. You can travel through most of our site without giving us any information about yourself. But sometimes we do need information to provide services that you request, and this statement of privacy explains data collection and use in those situations. When you encounter a screen in this site that asks for information you do not want us to have or use, you should not proceed further with that screen. </p>
-<h1>Collecting your Personal Information </h1>
-<p>
-We will ask you when we need information that personally identifies you (personal information) or allows us to contact you. Generally, this information is requested when you are asked to order e-mail newsletters, or request information from us. Personal information collected by Innovative Interfaces Inc., often is limited to e-mail address, language, country or location, but may include other information when needed to provide a service you requested. </p>
-<h1>Security of your Personal Information </h1>
-<p>
-Innovative Interfaces Inc., strictly protects the security of your personal information and honors your choices for its intended use. We carefully protect your data from loss, misuse, unauthorized access or disclosure, alteration, or destruction. Your personal information is never shared outside the company without your permission, except under circumstances where this policy would violate a lawful court order and/or Federal, State, or Local law or Statue. Your information may be stored and processed in the United States or any other country where Innovative Interfaces Inc., its subsidiaries, affiliates or agents are located. </p>
+<h1>Collecting your Personal Information</h1>
+<p>We will ask you when we need information that personally identifies you (personal information) or allows us to contact you. Generally, this information is requested when you are asked to order e-mail newsletters, or request information from us, or use our online customer support services for your library. Personal information collected by Innovative Interfaces Inc., often is limited to e-mail address, language, country or location, but may include other information when needed to provide a service you requested. </p>
+<h1>Security of your Personal Information</h1>
+<p>Innovative Interfaces Inc.,  strictly protects the security of your personal information and honors your choices for its intended use. We carefully protect your data from loss, misuse, unauthorized access or disclosure, alteration, or destruction. Your personal information is never shared outside the company without your permission, except under circumstances where this policy would violate a lawful court order and/or Federal, State, or Local law or Statue. Your information may be stored and processed in the United States or any other country where Innovative Interfaces Inc., its subsidiaries, affiliates or agents are located.</p>
 <h1>Protection of Children's Personal Information </h1>
-<p>
-The Innovative Interfaces Inc., site does not publish content that is targeted to children</p>
-<h1>Use of Cookies </h1>
-<p>
-To ensure we are publishing content customers need and want, Innovative Interfaces Inc., may collect aggregated site-visitation statistics using cookies. We would not track individuals' use of the site.</p>
-<p>When someone visits the site, a cookie may be placed on the customer's machine (if the customer accepts cookies) or is read if the customer has visited the site previously. </p>
-<p>Web beacons, also known as clear gif technology, or action tags, assist in delivering the cookie. This technology tells us how many visitors clicked on key elements (such as links or graphics) on a Innovative Interfaces Inc, Web page. Innovative Interfaces Inc., would not use this technology to access your personally identifiable information on Innovative Interfaces Inc.'s Website; it is a tool we use to compile aggregated statistics about Innovative Interfaces Inc.'s Web site usage. We do not share tracking information outside of Innovative Interfaces Inc., and do not allow other companies to place clear gifs on our site. </p>
-<p>If you choose to not have your browser accept cookies from the Innovative Interfaces Inc., Web site, you will be able to view the text on the screens, however you may not experience a personalized visit nor might you be able to subscribe to certain service offerings on the site.</p>
+<p>The Innovative Interfaces Inc., site does not publish content that is targeted to children.</p>
+<h1>Use of Cookies</h1>
+<p>Cookies allow Web browsers to remember information from a Web site. The browser stores the information in a text file. The message is then sent back to the site each time the browser requests a page from the site. A cookie can only be accessed by the site that created it. You can reset your browser so that it will refuse cookies or to indicate when a cookie is being sent. If you choose to not have your browser accept cookies from the Innovative Interfaces Inc., Web site, you will be able to view the text on the screens, however you may not experience a personalized visit.</p>
+<p>Innovative uses cookies to record customer assent. We do not use cookies for storing passwords or other sensitive information.</p>
+<h1>Log Files</h1>
+<p>Each view of a page on this site is logged.  We record information such as the most requested pages, usage by country, most downloaded pages, most active organizations, etc.  This information is used solely to gather broad demographic information for analysis of web site usage in improving services to our customers. This information is not shared outside of the company.   </p>
+<h1>Consent and Changes to the Privacy Policy</h1>
+<p>Your use of this site implies your consent to the collection of the information described in this policy.  When changes are made to this policy, Innovative will post these changes to this page of the website so that you will be aware of the information we collect and how we use it.</p>
 <h1>Contact Information</h1>
 <p>
 Innovative Interfaces Inc., welcomes your comments regarding this Statement of Privacy, please contact us by <a href="mailto:webmaster@iii.com">webmaster@iii.com</a>, or postal mail. </p>
